--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -17,5 +17,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  <script src="{% static 'main.09d14d19.jsg' %}"></script>
+  <script src="{% static 'main.c8baaa51.js' %}"></script>
 </html>
